z-index for header to fix overlap issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,13 +5,15 @@ body {
 }
 
 header {
-    width: 100%;
+    background-color: white;
     height: 5em;
-    position: fixed;
     left: 0;
+    position: fixed;
     top: 0;
     text-align: right;
-    background-color: white;
+    width: 100%;
+		/*z index fixes some relative postitioning while maintaining sticky header */
+		z-index: 100;
     /*box-shadow: 3px 3px 10px rgb(61, 61, 61); */
 }
 
